# Khaos

./: .LICENSE  .cmake-linter.yml  .codespellrc  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: CMake.yml  Ubuntu.yml  Windows.yml  codeql.yml  macOS.yml  pre-commit.yml  sonarcloud.yml
docs/: CMakeLists.txt
include/khaos/: khaos.h
src/: CMakeLists.txt
tests/: CMakeLists.txt
